started adding source files

--- a/InjectorKM/InjectorKM.vcxproj
+++ b/InjectorKM/InjectorKM.vcxproj
@@ -138,6 +138,12 @@
   <ItemGroup>
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Injector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Injector.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
